@@ -806,6 +806,7 @@ bool DetrimentalSpellAllowsRest(uint16 spell_id);
 uint32 GetNimbusEffect(uint16 spell_id);
 int32 GetFuriousBash(uint16 spell_id);
 bool IsShortDurationBuff(uint16 spell_id);
+bool IsSpellUsableThisZoneType(uint16 spell_id, uint8 ztype);
 const char *GetSpellName(int16 spell_id);
 
 #endif
